# bullgon

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: pull-request.yml
deploy/coreos/: Makefile  README.md
deploy/coreos/config/base/: config.json  config.yml
deploy/coreos/files/scripts/: wol-enable
deploy/coreos/files/systemd/: wol.service
hack/: gen-setup.py  setup.py.j2
src/bullgon/: cli.py  config.py  device.py  errors.py
test/: conftest.py  test_bullgon.py  test_cli_setup.py  test_cli_version.py  test_cli_wake.py  test_config.py  test_device.py
test/fixtures/devices.d/: full.toml  invalid.toml  minimal.toml  missing.toml
